cmake_minimum_required(VERSION 3.30)
project(W04)

set(CMAKE_CXX_STANDARD 20)

#add_executable(W04 pointerSource01.c)
#add_executable(W04 pointerSource02.c)
#add_executable(W04 pointerSource03.c)
#add_executable(W04 pointerSource04.c)
#add_executable(W04 pointerSource05.c)
#add_executable(W04 pointerSource06.c)
#add_executable(W04 pointerSource06_1.c)
#add_executable(W04 source01.c)
#add_executable(W04 source02.c)
#add_executable(W04 source03.c)
#add_executable(W04 source04.c)
#add_executable(W04 source05.c)
add_executable(W04 source06.c)

